[tool.poetry]
name = "gbpowermarkets"
version = "0.1.0"
description = "tools for analysing gb power markets"
authors = ["Imran"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
